Changelog
=========

1.0rc2 (unreleased)
-------------------

- Nothing changed yet.


1.0rc1 (2012-05-11)
-------------------

- Tested Plone 4.2 compatibility. [hvelarde]

- Added support for Dexterity content types (fixes `#2`_). [flecox]

- Added Spanish and Brazilian Portuguese translations. [hvelarde]

- Added some real tests to fix some stuff. [hvelarde]

- Updated package distribution files. [hvelarde]


1.0b2 (2011-04-11)
------------------

- Check random digit doesn't starts with 199 or 200.


1.0b1 (2011-04-08)
------------------

- Initial release.

.. _`#2`: https://github.com/collective/collective.googlenews/issues/2
